Seleção de multiplas NF

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
         </div>
         <div class="filter-group">
           <label for="filterNf">NF:</label>
-          <input type="text" id="filterNf" class="form-control filter-input" placeholder="Digite a NF">
+          <select id="filterNf" class="filter-input" multiple>
+          </select>
         </div>
         <div class="filter-group">
           <label for="filterNumProcesso1Select">Nº Processo:</label>
