--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-  <script type="module" src="js/script.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
