Implementação de filtro na coluna medição | cards somam agora com base no filtro selecionado

--- a/pages/_financeiro_content.html
+++ b/pages/_financeiro_content.html
@@ -1,16 +1,20 @@
-<div class="financeiro-kpi-grid card">
-  <div class="financeiro-kpi-card status-ok">
-    <i class="fas fa-check-circle kpi-icon"></i>
-    <div class="kpi-text">
-      <h4>Recebimento Líquido</h4>
-      <p class="kpi-value" id="kpiRecebimentoLiquido">R$ 0,00</p> </div>
-  </div>
-  <div class="financeiro-kpi-card status-warning">
-    <i class="fas fa-exclamation-triangle kpi-icon"></i>
-    <div class="kpi-text">
-      <h4>Aguardando pagamento</h4>
-      <p class="kpi-value" id="kpiAguardandoPagamento">R$ 0,00</p> </div>
-  </div>
+<div class="kpi-sticky-container">
+    <div class="financeiro-kpi-grid card">
+        <div class="financeiro-kpi-card status-ok">
+            <i class="fas fa-check-circle kpi-icon"></i>
+            <div class="kpi-text">
+                <h4>Recebimento Líquido</h4>
+                <p class="kpi-value" id="kpiRecebimentoLiquido">R$ 0,00</p>
+            </div>
+        </div>
+        <div class="financeiro-kpi-card status-warning">
+            <i class="fas fa-exclamation-triangle kpi-icon"></i>
+            <div class="kpi-text">
+                <h4>Aguardando pagamento</h4>
+                <p class="kpi-value" id="kpiAguardandoPagamento">R$ 0,00</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="card">
@@ -21,7 +25,16 @@
         <tr>
           <th>ÓRGÃO</th>
           <th>OBRA</th>
-          <th>MEDIÇÃO</th>
+          <th class="th-with-filter">
+            <div id="medicaoFilterContainer" class="excel-filter-container">
+              <span>MEDIÇÃO</span>
+              <button id="medicaoFilterBtn" class="excel-filter-btn" aria-label="Filtrar por Medição">
+                <i class="fas fa-filter"></i>
+              </button>
+              <div id="medicaoFilterDropdown" class="excel-filter-dropdown">
+                </div>
+            </div>
+          </th>
           <th>PERIODO</th>
           <th>EXECUTADO (R$)</th>
           <th>NF</th>
@@ -36,7 +49,8 @@
       <tfoot>
         <tr>
           <td colspan="4"><strong>Total</strong></td>
-          <td class="text-right" id="financeiroTotalExecutado"><strong>R$ 0,00</strong></td> <td colspan="5"></td>
+          <td class="text-right" id="financeiroTotalExecutado"><strong>R$ 0,00</strong></td>
+          <td colspan="5"></td>
           <td class="total-progress-cell">
             <div class="table-footer-progress">
               <div class="table-footer-progress-bar" id="financeiroProgressBar" style="width: 0%;"></div>
